jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;



// Funções

DllImport int ECF_AbreCupom(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco, const BOOL ModoPreVenda);

DllImport int ECF_AbreGaveta(const INTPTR ecfHandle);

DllImport int ECF_AcharECF(const INTPTR ecfHandle, const BOOL Modelo, const BOOL Porta, const int TimeOut);

DllImport int ECF_AcharPorta(const INTPTR ecfHandle, const int TimeOut);

DllImport int ECF_CorrigeEstadoErro(const INTPTR ecfHandle, const BOOL reducaoZ);

DllImport int ECF_CortaPapel(const INTPTR ecfHandle, const BOOL corteParcial);

DllImport int ECF_DescontoAcrescimoItemAnterior(const INTPTR ecfHandle, const double valorDescontoAcrescimo, const PCHAR descontoAcrescimo, const PCHAR TipoDescontoAcrescimo, const int Item);

DllImport int ECF_EfetuaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_EstornaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagtoEstornar, const PCHAR codFormaPagtoEfetivar, const double valor, const PCHAR observacao);

DllImport int ECF_GetMemoParams(const INTPTR ecfHandle, PCHAR linha, const int bufferLen, const int index);

DllImport int ECF_GetMemoParamsLineCount(const INTPTR ecfHandle);

DllImport int ECF_IdentificaConsumidor(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_LegendaInmetroProximoItem(const INTPTR ecfHandle);

DllImport int ECF_MudaArredondamento(const INTPTR ecfHandle, const BOOL arredonda);

DllImport int ECF_MudaHorarioVerao(const INTPTR ecfHandle);

DllImport int ECF_PulaLinhas(const INTPTR ecfHandle, const int numLinhas);

DllImport int ECF_Sangria(const INTPTR ecfHandle, const double valor, const PCHAR obs, const PCHAR DescricaoCNF, const PCHAR DescricaoFPG, const int indicebmp);

DllImport int ECF_SetMemoParams(const INTPTR ecfHandle, const PCHAR linhas[], const int count);

DllImport int ECF_SubtotalizaCupom(const INTPTR ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);

DllImport int ECF_Suprimento(const INTPTR ecfHandle, const double valor, const PCHAR obs, const PCHAR DescricaoCNF, const PCHAR DescricaoFPG, const int indicebmp);

DllImport int ECF_VendeItem(const INTPTR ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR aliquotaICMS, const double qtd, const double valorUnitario, const double descontoPorc, const PCHAR unidade, const PCHAR tipoDescontoAcrescimo, const PCHAR descontoAcrescimo, const int CodDepartamento);